<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadeScrollbars="true"
    android:fitsSystemWindows="true"
    android:scrollbarSize="10dip"
    android:scrollbarStyle="insideInset" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true"
        android:orientation="vertical"
        tools:context=".Inicial_Activity" >

        <TextView
            android:id="@+id/txtexemplo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/txtExemp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <EditText
            android:id="@+id/txtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtNome" >
        </EditText>

        <EditText
            android:id="@+id/txtFone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/txtTelefone"
            android:inputType="phone" />

        <TextView
            android:id="@+id/txtSexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/txtSexo" />

        <RadioGroup
            android:id="@+id/radioGroupSexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioMasc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txtMasc" />

            <RadioButton
                android:id="@+id/radioFem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtFem" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20dp"
            android:text="@string/txtHobby" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtCinema" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtShopping" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtClube" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtMusicas" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtEsportes" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >
        </LinearLayout>

        <Button
            android:id="@+id/btnGravar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/layout_botao_azul"
            android:onClick="gravarDados"
            android:text="@string/btnGravar"
            android:padding="15dp"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</ScrollView>