<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_marker"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/layout_bordas_brancas"
    android:orientation="vertical"
    android:paddingLeft="20dp" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/layout1"
        android:paddingBottom="20dp" >

        <Button
            android:id="@+id/btnBancoDados"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnPreferencias"
            android:layout_alignBottom="@+id/btnPreferencias"
            android:layout_alignParentRight="true"
            android:layout_marginRight="21dp"
            android:background="@drawable/layout_botao_azul"
            android:gravity="center"
            android:text="@string/btnBD"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnPreferencias"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/layout_botao_azul"
            android:gravity="center"
            android:text="@string/btnPreferencias"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/btnInterno"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/layout_botao_azul"
            android:gravity="center"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/btnInterno"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnExterno"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="22dp"
            android:background="@drawable/layout_botao_azul"
            android:gravity="center"
            android:paddingLeft="38dp"
            android:paddingRight="38dp"
            android:text="@string/btnExterno"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/txtDialogo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>